fix vertical spacing in booking+additional-field+ticket-form forms #96

--- a/src/app/additional-field/additional-field.component.html
+++ b/src/app/additional-field/additional-field.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="form">
+<ng-container [formGroup]="form">
   <div class="form-group" [formArrayName]="field.name">
     <label class="form-label" [attr.for]="ticketUUID + '-' + field.name" [id]="labelId" [attr.aria-hidden]="hideLabelForAssistiveTechnologies">{{labelValue + (field.required ? ' *' : '')}}</label>
     <ng-container [ngSwitch]="field.type" *ngIf="editAllowed">
@@ -30,4 +30,4 @@
       {{ getRestrictedValueLabel(field.value) }}
     </div>
   </div>
-</div>
+</ng-container>
