--- a/src/app/shared/language-selector/language-selector.component.html
+++ b/src/app/shared/language-selector/language-selector.component.html
@@ -1,4 +1,4 @@
-<div class="text-right" ngbDropdown *ngIf="filteredLanguages && filteredLanguages.length > 0">
+<div class="text-end" ngbDropdown *ngIf="filteredLanguages && filteredLanguages.length > 0">
   <button class="btn btn-link text-muted" id="languageDropdown" ngbDropdownToggle>
       <fa-icon [icon]="['fas', 'globe']" aria-hidden="true" [title]="'reservation-page-complete.language' | translate"></fa-icon> {{currentLanguage}}
   </button>
