replace custom-control-* classes with new form-check

--- a/src/app/event-dates/event-dates.component.html
+++ b/src/app/event-dates/event-dates.component.html
@@ -10,12 +10,12 @@
     <div class="col-1" *ngIf="displayIcon"><fa-icon [icon]="['far', 'calendar-alt']" class="text-muted" [title]="'ticket.date-time' | translate"></fa-icon></div>
     <div [ngClass]="{'col-11': displayIcon, 'col-12': !displayIcon}">
       <div>
-        <span class="mr-2"><strong translate="event-days.from"></strong></span>
+        <span class="me-2"><strong translate="event-days.from"></strong></span>
         <span>{{localizedStartDateForMultiDay}}</span>
         <span class="text-muted" *ngIf="displayTimeZoneInfo">&nbsp; ({{dateValidityProvider.timeZone}})</span>
       </div>
       <div>
-        <span class="mr-2"><strong translate="event-days.to"></strong></span>
+        <span class="me-2"><strong translate="event-days.to"></strong></span>
         <span>{{localizedEndDateForMultiDay}}</span>
         <span class="text-muted" *ngIf="displayTimeZoneInfo">&nbsp; ({{dateValidityProvider.timeZone}})</span>
       </div>
