--- a/src/app/item-card/item-card.html
+++ b/src/app/item-card/item-card.html
@@ -1,7 +1,7 @@
 <div class="card mt-4" [formGroup]="parentFormGroup" [ngClass]="additionalClass">
   <div class="card-body">
     <div class="item-content-except-desc">
-      <h3 class="card-title pr-1">
+      <h3 class="card-title pe-1">
         <ng-content select=".item-title"></ng-content>
       </h3>
       <div class="card-sale-period">
