--- a/src/app/shared/feedback/feedback.component.html
+++ b/src/app/shared/feedback/feedback.component.html
@@ -1,6 +1,6 @@
 <ngb-toast (hide)="hide()" [autohide]="true" [delay]="2500" *ngIf="active" [ngClass]="boxClass">
   <div class="d-flex">
-    <div class="pl-2 pr-2 d-flex justify-content-center align-items-center" [ngClass]="headerClass">
+    <div class="ps-2 pe-2 d-flex justify-content-center align-items-center" [ngClass]="headerClass">
       <fa-icon [icon]="boxIcon" size="2x"></fa-icon>
     </div>
     <div class="p-2 d-flex align-items-center">
