--- a/src/app/reservation/processing-payment/processing-payment.component.html
+++ b/src/app/reservation/processing-payment/processing-payment.component.html
@@ -13,7 +13,7 @@
   <div class="alert text-center" [ngClass]="{'alert-info': !providerWarningVisible, 'alert-warning': providerWarningVisible}">
     <div class="h5" *ngIf="!forceCheckVisible && !providerWarningVisible"><span translate="reservation.payment-in-progress"></span><app-animated-dots></app-animated-dots></div>
     <div class="h5" *ngIf="forceCheckVisible || providerWarningVisible"><span>{{ (providerWarningVisible ? 'reservation.payment-processing.warning.message' : 'reservation.payment-processing.delay.message') | translate }}</span><app-animated-dots></app-animated-dots></div>
-    <div class="text-center" *ngIf="forceCheckVisible"><button class="btn btn-default ml-5" translate="reservation.payment-processing.force-check" (click)="forceCheck()"></button></div>
+    <div class="text-center" *ngIf="forceCheckVisible"><button class="btn btn-default ms-5" translate="reservation.payment-processing.force-check" (click)="forceCheck()"></button></div>
   </div>
 </div>
 
