--- a/src/app/reservation/download-ticket/download-ticket.component.html
+++ b/src/app/reservation/download-ticket/download-ticket.component.html
@@ -15,12 +15,11 @@
       </a>
     </div>
 
-    <div class="w-100 text-center mb-4">
-      <span translate="common.or"></span>
-    </div>
-
     <div class="col-8 offset-2 col-md-6 offset-md-3 align-self-center">
-      <a target="_blank" (click)="close()" rel="noopener" [attr.href]="'/api/v2/public/event/' + eventName + '/ticket/' + ticket.uuid + '/download-ticket'" class="btn btn-link btn-block d-flex justify-content-around align-items-center"><div><fa-icon size="2x" [icon]="['fas', 'file-pdf']" a11yRole="presentation"></fa-icon></div> <div>{{'reservation-page-complete.download-ticket'|translate}} PDF</div></a>
+      <a target="_blank" (click)="close()" rel="noopener" [attr.href]="'/api/v2/public/event/' + eventName + '/ticket/' + ticket.uuid + '/download-ticket'" class="btn btn-link btn-block d-flex justify-content-center align-items-center">
+        <div class="mr-3"><fa-icon size="2x" [icon]="['fas', 'file-pdf']" a11yRole="presentation"></fa-icon></div>
+        <div>{{'reservation-page-complete.download-ticket'|translate}} PDF</div>
+      </a>
     </div>
 
   </div>
