use svg also in download-ticket.component.html

--- a/src/app/reservation/download-ticket/download-ticket.component.html
+++ b/src/app/reservation/download-ticket/download-ticket.component.html
@@ -5,7 +5,7 @@
   <div class="row mt-5 mb-5">
     <div class="col-8 offset-2 col-md-6 offset-md-3 align-self-center mb-5" *ngIf="gWalletEnabled">
       <a target="_blank" rel="noopener" (click)="close()" [attr.href]="'/api/wallet/event/' + eventName + '/v1/version/passes/'+ticket.uuid">
-        <img src="/resources/images/email/enUS_add_to_google_wallet_wallet-button.png" class="img-responsive mx-auto" alt="Add to Google Wallet">
+        <img src="/resources/images/email/enUS_add_to_google_wallet_add-wallet-badge.svg" class="img-responsive mx-auto" alt="Add to Google Wallet">
       </a>
     </div>
 
