hide only buttons when embedded and postMessage is enabled

--- a/src/app/reservation/success/success.component.html
+++ b/src/app/reservation/success/success.component.html
@@ -101,7 +101,7 @@
     </div>
   </div>
 
-  <div *ngIf="!ticketFormVisible" class="mt-5">
+  <div *ngIf="!ticketFormVisible && showReservationButtons" class="mt-5">
     <hr>
     <div class="row d-flex justify-content-between">
       <div class="col-md-5 order-md-1 col-12 mb-2">
