--- a/src/app/reservation/success-subscription/success-subscription.component.html
+++ b/src/app/reservation/success-subscription/success-subscription.component.html
@@ -43,7 +43,7 @@
           <span *ngIf="subscriptionInfo.usageDetails.available">&nbsp;{{ 'reservation-page-complete.subscription.usage.available' | translate: {'0': subscriptionInfo.usageDetails.available} }}</span>
         </p>
       </div>
-      <div class="col-12 col-lg-6 text-center d-lg-flex flex-lg-column justify-content-lg-between">
+      <div class="col-12 col-lg-6 text-center d-lg-flex flex-lg-column justify-content-lg-between" *ngIf="displayPin">
         <div class="mt-5 mt-lg-0">
           <p class="lead" translate="reservation-page-complete.subscription.pin-description"></p>
         </div>
@@ -69,31 +69,33 @@
       </div>
     </div>
 
-    <hr class="mt-5">
+    <ng-container *ngIf="showReservationButtons">
+      <hr class="mt-5">
 
-    <div class="mt-5" *ngIf="compatibleEvents.length > 0">
-      <div class="h3">{{ 'reservation-page-complete.subscription.buy-tickets' | translate }}</div>
-      <div class="card-deck mt-5">
-        <app-basic-event-info [event]="event" class="mb-4" *ngFor="let event of compatibleEvents" [params]="{subscription: subscriptionInfo.id}"></app-basic-event-info>
-      </div>
-    </div>
-
-    <hr class="mt-5" *ngIf="compatibleEvents.length > 0">
-
-    <div class="mt-5">
-      <div class="row d-flex justify-content-md-between">
-        <div class="col-md-5 order-md-1 col-12 mb-2">
-          <a class="block-button btn btn-success" [routerLink]="['/events-all']" [queryParams]="{ subscription: subscriptionInfo.id }" translate="reservation-page-complete.buy-tickets"></a>
-        </div>
-        <div class="col-md-5 order-md-0 col-12 mt-2 mt-md-0 mb-2">
-          <a class="block-button btn btn-light" [routerLink]="['/']" translate="to-home"></a>
+      <div class="mt-5" *ngIf="compatibleEvents.length > 0">
+        <div class="h3">{{ 'reservation-page-complete.subscription.buy-tickets' | translate }}</div>
+        <div class="card-deck mt-5">
+          <app-basic-event-info [event]="event" class="mb-4" *ngFor="let event of compatibleEvents" [params]="{subscription: subscriptionInfo.id}"></app-basic-event-info>
         </div>
       </div>
-    </div>
-    <div class="text-center text-muted mt-5">{{'reservation-page-complete.order-information' | translate: {'0': reservationId, '1': reservationInfo.firstName + ' ' + reservationInfo.lastName} }}</div>
-    <div class="text-center mt-1">
-      <a href="https://alf.io" [attr.title]="'alfio.credits' | translate" target="_blank" rel="noreferrer noopener" translate="alfio.credits"></a>
-    </div>
+
+      <hr class="mt-5" *ngIf="compatibleEvents.length > 0">
+
+      <div class="mt-5">
+        <div class="row d-flex justify-content-md-between">
+          <div class="col-md-5 order-md-1 col-12 mb-2">
+            <a class="block-button btn btn-success" [routerLink]="['/events-all']" [queryParams]="{ subscription: subscriptionInfo.id }" translate="reservation-page-complete.buy-tickets"></a>
+          </div>
+          <div class="col-md-5 order-md-0 col-12 mt-2 mt-md-0 mb-2">
+            <a class="block-button btn btn-light" [routerLink]="['/']" translate="to-home"></a>
+          </div>
+        </div>
+      </div>
+      <div class="text-center text-muted mt-5">{{'reservation-page-complete.order-information' | translate: {'0': reservationId, '1': reservationInfo.firstName + ' ' + reservationInfo.lastName} }}</div>
+      <div class="text-center mt-1">
+        <a href="https://alf.io" [attr.title]="'alfio.credits' | translate" target="_blank" rel="noreferrer noopener" translate="alfio.credits"></a>
+      </div>
+    </ng-container>
   </div>
 
 </app-reservation>
