additional flags for customizing reservation flow

--- a/src/app/reservation/booking/booking.component.html
+++ b/src/app/reservation/booking/booking.component.html
@@ -91,7 +91,7 @@
                 </div>
               </div>
               <div class="h3 mb-3"><small class="text-muted">{{tc.name}}</small></div>
-              <app-ticket-form [ticket]="ticket" [purchaseContext]="purchaseContext" [form]="getTicketForm(ticket)"></app-ticket-form>
+              <app-ticket-form [ticket]="ticket" [purchaseContext]="purchaseContext" [form]="getTicketForm(ticket)" [reservationMetadata]="reservationInfo.metadata"></app-ticket-form>
             </div>
           </div>
         </div>
