--- a/src/app/reservation/ticket-form/ticket-form.component.html
+++ b/src/app/reservation/ticket-form/ticket-form.component.html
@@ -21,7 +21,7 @@
 
     <div class="form-group">
       <label [attr.for]="ticket.uuid + '-email'">{{'common.email' | translate}} *</label>
-      <input [attr.id]="ticket.uuid + '-email'" formControlName="email" type="email" [ngClass]="{'form-control': ticket.locked !== true, 'form-control-plaintext': ticket.locked}" appInvalidFeedback [readonly]="ticket.locked === true">
+      <input [attr.id]="ticket.uuid + '-email'" formControlName="email" type="email" [ngClass]="{'form-control': !emailEditForbidden, 'form-control-plaintext': emailEditForbidden}" appInvalidFeedback [readonly]="emailEditForbidden">
     </div>
 
     <div *ngFor="let field of ticket.ticketFieldConfigurationAfterStandard">
