--- a/src/app/subscription-summary/subscription-summary.component.html
+++ b/src/app/subscription-summary/subscription-summary.component.html
@@ -42,7 +42,7 @@
   <dt class="col-2 col-lg-1 text-muted"><fa-icon [icon]="['fas', 'money-bill']" [title]="'reservation-page.price' | translate"></fa-icon></dt>
   <dd class="col-10 col-lg-11 font-weight-bold"><app-price-tag [formattedPrice]="subscription.formattedPrice" [purchaseContext]="subscription" [showTaxDetails]="true" [singleLineLayout]="true"></app-price-tag></dd>
 
-  <ng-container *ngIf="owner">
+  <ng-container *ngIf="hasData(owner)">
     <dt class="col-2 col-lg-1 text-muted"><fa-icon [icon]="['fas', 'address-card']" [title]="'reservation-page-complete.subscription.owner' | translate"></fa-icon></dt>
     <dd class="col-10 col-lg-11">{{owner.firstName}} {{owner.lastName}} ({{owner.email}})</dd>
   </ng-container>
