support "lockEmailEdit" option for subscription

--- a/src/app/reservation/booking/booking.component.html
+++ b/src/app/reservation/booking/booking.component.html
@@ -120,7 +120,7 @@
 
         <div class="form-group">
           <label for="subscription-email">{{'common.email' | translate}} *</label>
-          <input id="subscription-email" formControlName="email" type="email" class="form-control" appInvalidFeedback>
+          <input id="subscription-email" formControlName="email" type="email" [ngClass]="{'form-control': !emailEditForbidden, 'form-control-plaintext': emailEditForbidden}" appInvalidFeedback>
         </div>
       </div>
     </ng-container>
