--- a/src/app/reservation/overview/overview.component.html
+++ b/src/app/reservation/overview/overview.component.html
@@ -49,7 +49,7 @@
       </div>
     </div>
 
-    <div *ngIf="purchaseContext.canApplySubscriptions && !appliedSubscription">
+    <div *ngIf="purchaseContext.canApplySubscriptions && !appliedSubscription" [class.invisible]="submitting">
       <h2 class="page-header mt-2" translate="reservation-page.subscription"></h2>
 
       <div *ngIf="!displaySubscriptionForm" class="row mt-2">
